--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #0b5a2a;
+        background: yellow;
         font-family: Georgia, "Times New Roman", Times, serif;
       }
 
